# SnakeGame

./: CMakeLists.txt  Makefile  README.md  TODO.md  collision.h  conanfile.txt  draw.cpp  food.h  main.cpp  snake.cpp  snake.h
include/: draw.h  food.h  sdl_wrapper.h  snake.h  text.h  utils.h
python/: client.py  server.py
src/: collision.cpp  draw.cpp  food.cpp  main.cpp  sdl_wrapper.cpp  snake.cpp  text.cpp  utils.cpp
